<resources>
    <string name="app_name">asize</string>
    <string name="spisokD">Список дел</string>
    <string name="text1">Вечерний поход в кино</string>
    <string name="text2">Идем в кино с коллегами</string>
    <string name="text3">10.02.2021</string>
    <string name="text4">19:40</string>
    <string name="text5">Забрать заказ Ozon</string>
    <string name="text6">Пункт выдачи на ул. Ленина, 103</string>
    <string name="text7">Запись в автосервис</string>
    <string name="text8">Сдать автомобиль в автосервис на ул. Бисертская, д. 14. Замена масла</string>
    <string name="text9">Добавить задачу</string>
    <string name="text10">10:00</string>
    <string name="text11">Встретиться с подругами</string>
    <string name="text12">21:30</string>
    <string name="text13">Ресторан MONK</string>
    <string name="text14">Заказать цветы на утро</string>
    <string name="text15">tg: melissa_flowers</string>
    <string name="text16">22:00</string>
    <string name="text17">Будильник</string>
    <string name="text18">Добавить будильник</string>
    <string name="text19">07:30</string>
    <string name="text20">08:00</string>
    <string name="text21">Календарь</string>
    <string name="text22">Настройки</string>
    <string name="text23">Регистрация</string>
    <string name="text24">Имя пользователя</string>
    <string name="text25">Адрес электронной почты</string>
    <string name="text26">Пароль</string>
    <string name="text27">Регистрация</string>
    <string name="text28">Заголовок задачи</string>
    <string name="text29">16:30</string>
    <string name="text30">14.01.21</string>
    <string name="text31">Описание задачи</string>
    <string name="text32">Удалить задачу</string>
    <string name="text33">Записать задачу</string>
    <string name="text34">Изменить задачу</string>
    <string name="text35">Добавить задачу</string>
    <string name="text36">Войти</string>
    <string name="text37">Повторить каждый</string>
    <string name="text38">Понедельник</string>
    <string name="text39">Вторник</string>
    <string name="text40">Среда</string>
    <string name="text41">Четверг</string>
    <string name="text42">Пятница</string>
    <string name="text43">Суббота</string>
    <string name="text44">Воскресенье</string>
    <string name="text45">Создать будильник</string>
    <string name="text46">Изменить будильник</string>
    <string name="text47">Удалить будильник</string>
    <string name="text48">Профиль пользователя</string>
    <string name="text49">Вход не выполнен</string>
</resources>