<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gark_green"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/text18"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/appCompatButton2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <EditText
                android:layout_width="165dp"
                android:layout_height="50dp"
                android:background="@drawable/edit_text"
                android:gravity="center"
                android:hint="@string/text29"
                android:textColorHint="@color/grey"></EditText>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@drawable/edit_text"
                android:gravity="center"
                android:hint="@string/text30"
                android:textColorHint="@color/grey"></EditText>

        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text37"
            android:layout_marginTop="25dp"
            android:textSize="18sp"
            android:textColor="@color/white"></TextView>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/text38"
            android:layout_marginTop="16dp"
            android:textSize="18sp"
            android:textColor="@color/white"></CheckBox>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/text39"
            android:textSize="18sp"
            android:textColor="@color/white"></CheckBox>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/text40"
            android:textSize="18sp"
            android:textColor="@color/white"></CheckBox>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/text41"
            android:textSize="18sp"
            android:textColor="@color/white"></CheckBox>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/text42"
            android:textSize="18sp"
            android:textColor="@color/white"></CheckBox>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/text43"
            android:textSize="18sp"
            android:textColor="@color/white"></CheckBox>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/text44"
            android:textSize="18sp"
            android:textColor="@color/white"></CheckBox>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/appCompatButton2"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/rent"
        android:text="@string/text45"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </androidx.appcompat.widget.AppCompatButton>

</androidx.constraintlayout.widget.ConstraintLayout>